# xmonad-prime-monad

./: .gitignore  .travis.yml  LICENSE  README.md  xmonad-prime-monad.cabal
XMonad/Config/Prime/: Monadic.hs
