name: xmonad-prime-monad
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: root@livid.pp.ru
homepage: http://github.com/lierdakil/xmonad-prime-monad/
synopsis: True monadic config for XMonad
category: System
author: Nikolay Yakimov

library
    exposed-modules:
        XMonad.Config.Prime.Monadic
    build-depends:
        base >=4.5 && <5,
        xmonad >=0.12 && <0.13,
        mtl >=1 && <3,
        xmonad-contrib >=0.12 && <0.13,
        ghc-prim -any
    default-language: Haskell2010
    hs-source-dirs: .
